--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -29,6 +29,7 @@ en:
   new_child: "New Child"
   edit: "Edit"
   destroy: "Destroy"
+  register: "Register"
   are_you_sure: "Are you sure?"
   new: "New"
   editing: "Editing"
@@ -38,6 +39,7 @@ en:
   permissions: "Permissions (Roles)"
   contact_from: "Contact from"
   message_sent: "Your message was sent."
+  edit_profile: "Edit Profile"
 
   # Resource Controller Messages
   success_create: "Successfully created!"
